force-app/main/default/objects/Apttus_Config2__AssetTransactionHistory__c/fields/Apttus_Config2__Action__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Action__c</fullName>
    <description>The asset action</description>
    <inlineHelpText>The asset action</inlineHelpText>
    <label>Action</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Amend</fullName>
            </value>
            <value>
                <fullName>Renew</fullName>
            </value>
            <value>
                <fullName>Cancel</fullName>
            </value>
            <value>
                <fullName>Upgrade</fullName>
            </value>
            <value>
                <fullName>Suspend</fullName>
            </value>
            <value>
                <fullName>Resume</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>