force-app/main/default/objects/Apttus_Config2__AssetTransactionHistory__c/fields/Apttus_Config2__AssetLineItemId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__AssetLineItemId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the associated asset line item</description>
    <inlineHelpText>ID of the associated asset line item</inlineHelpText>
    <label>Asset Line Item</label>
    <referenceTo>Apttus_Config2__AssetLineItem__c</referenceTo>
    <relationshipLabel>Asset Transaction History (From)</relationshipLabel>
    <relationshipName>AssetTransactionHistoryFrom</relationshipName>
    <type>Lookup</type>
</CustomField>