force-app/main/default/objects/Apttus_Config2__AssetTransactionHistory__c/fields/Apttus_Config2__ChangeInAssetTCV__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ChangeInAssetTCV__c</fullName>
    <description>The change in the asset TCV due to the transaction</description>
    <inlineHelpText>The change in the asset TCV due to the transaction</inlineHelpText>
    <label>Change In Asset TCV</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>