force-app/main/default/objects/Apttus_Config2__AssetTransactionHistory__c/fields/Apttus_Config2__EffectiveStartDate__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__EffectiveStartDate__c</fullName>
    <description>The transaction effective start date</description>
    <inlineHelpText>The transaction effective start date</inlineHelpText>
    <label>Effective Start Date</label>
    <type>Date</type>
</CustomField>