force-app/main/default/objects/Apttus_Config2__AssetTransactionHistory__c/fields/Apttus_Config2__ImpactMRR__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ImpactMRR__c</fullName>
    <description>The change in monthly recurring revenue due to the transaction</description>
    <inlineHelpText>The change in monthly recurring revenue due to the transaction</inlineHelpText>
    <label>Impact MRR</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>