force-app/main/default/objects/Apttus_Config2__AssetTransactionHistory__c/fields/Apttus_Config2__ToAssetLineItemId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ToAssetLineItemId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the associated changed to asset line item</description>
    <inlineHelpText>ID of the associated changed to asset line item</inlineHelpText>
    <label>Changed To Asset Line Item</label>
    <referenceTo>Apttus_Config2__AssetLineItem__c</referenceTo>
    <relationshipLabel>Asset Transaction History (To)</relationshipLabel>
    <relationshipName>AssetTransactionHistoryTo</relationshipName>
    <type>Lookup</type>
</CustomField>